Added external generators

--- a/SedcServer/TryTwo/public/index.html
+++ b/SedcServer/TryTwo/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hello from Server</title>
+    <link rel="stylesheet" href="site/style.css">
 </head>
 <body>
     <h1>Hello from Server</h1>
@@ -15,5 +16,7 @@
     <p>
         The server is running on port 668.
     </p>
+
+    <img src="site/computers.png">
 </body>
 </html>
